--- a/Blockchain/package.json
+++ b/Blockchain/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/szreek/LimeAcademy.git"
   },
   "keywords": [
-    "library",
+    "marketplace",
     "lime"
   ],
   "author": "lszweda",
